--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -63,7 +63,9 @@ h1{
 	font-size: 4em;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 500;
+	margin-bottom: 0px;
 }
+
 .bold{
 	color: #404094;
 	font-family: 'Oswald', sans-serif;
@@ -99,7 +101,7 @@ h2{
 	text-align: center;
 	padding-left: 0px;
 	margin-top: 1em;
-	margin-bottom: 0em;
+	margin-bottom: 0.5em;
 }
 p{
 	color: white;
@@ -131,14 +133,14 @@ h5{
 	margin-bottom: 20px;
 	font-family: 'Oswald', sans-serif;
 	text-align: center;
-	font-size: 1rem;
+	font-size: 1.3rem;
 	background-color: #404094;
+	background-image: url(../imagenes/patronAzul.png);
 	color: white;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 700;
 	text-transform: uppercase;
 	justify-content: flex-end;
-	font-size: 1.5em;
 	width: 100%;
 	margin: 0px;
 	padding: 0px;
@@ -156,6 +158,7 @@ h5{
 	font-family: 'Oswald', sans-serif;
 	text-align: center;
 	font-size: 1rem;
+	width: 60%;
 	}	
 }
 .footer{
@@ -186,12 +189,12 @@ h5{
 	display: flex;
 	align-items: center;
 	color: white;
-	background-image: url(../imagenes/rueda.png);
-	background-position: center;
+	background-image: url(../imagenes/patronNegro.jpg);
+	background-position: top;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 700;
 	text-transform: uppercase;
-	font-size: 4em;
+	font-size: 3em;
 	width: 100%;
 	text-align: center;
 	height: 3em;
@@ -203,7 +206,34 @@ h5{
 .imgScale:hover{
 	transform: scale(1.1);
 }
+.width40{
+	width: 40%;
+}
 .textoBlack{
-	color: black;
+	font-family: 'Oswald', sans-serif;
 	font-size: 1em;
+	color: black;
+}
+.bordeDashed{
+	border: 4px dashed #404094;
+	border-radius: 0px 0px 40px 40px;
+}
+.card{
+	border: 1px solid #404094;
+	border-bottom: 3px groove #404094;
+	border-radius: 0px 0px 40px 40px;
+	margin-bottom: 2rem;
+}
+.btn{
+	background-color:#404094;
+	border: 1px solid white;
+	margin-bottom: 1rem;
+}
+.volver{
+	display: flex;
+	flex-direction: column;
+	align-content: flex-start;
+}
+.height80{
+	height: 20%;
 }
