--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -12,14 +12,14 @@
 
 .menu {
   background-color: #404094;
-  color: white;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
+  font-size: 1.5em;
   font-weight: 700;
+  color: white;
   text-transform: uppercase;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  font-size: 1.5em;
 }
 
 .menu_blanco {
@@ -46,17 +46,17 @@
 }
 
 .row.margin .texto {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   text-align: center;
   font-size: 1rem;
 }
 
 .row.margin .texto .bold {
-  color: #404094;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
   font-size: 27px;
+  font-weight: 700;
+  color: #404094;
+  text-transform: uppercase;
   text-align: center;
   display: block;
 }
@@ -69,45 +69,45 @@
 
 h1 {
   font-size: 4em;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-weight: 500;
   margin-bottom: 0px;
 }
 
 .bold {
-  color: #404094;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
   font-size: 27px;
+  font-weight: 700;
+  color: #404094;
+  text-transform: uppercase;
   text-align: center;
   display: block;
   margin-top: 1em;
 }
 
 .bold2 {
-  color: white;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
   font-size: 1.5em;
+  font-weight: 700;
+  color: white;
+  text-transform: uppercase;
   text-align: center;
   display: block;
   text-decoration: underline;
 }
 
 .texto {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   text-align: center;
   font-size: 1rem;
 }
 
 h2 {
-  color: #404094;
-  font-family: 'Oswald', sans-serif;
-  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
   font-size: 3em;
   font-weight: 900;
+  color: #404094;
+  text-transform: uppercase;
   text-decoration: underline;
   text-align: center;
   padding-left: 0px;
@@ -116,10 +116,11 @@ h2 {
 }
 
 p {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.5;
+  font-weight: 500;
   color: white;
   text-align: center;
-  font-family: 'Oswald', sans-serif;
-  font-size: 1.5em;
 }
 
 li {
@@ -128,7 +129,7 @@ li {
 
 h5 {
   font-size: 4em;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   text-transform: uppercase;
 }
 
@@ -154,14 +155,13 @@ h5 {
   margin-right: 0px;
   margin-left: 0px;
   margin-bottom: 20px;
-  font-family: 'Oswald', sans-serif;
   text-align: center;
+  font-family: "Oswald", sans-serif;
   font-size: 1.3rem;
+  font-weight: 700;
+  color: white;
   background-color: #404094;
   background-image: url(../imagenes/patronAzul.png);
-  color: white;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 700;
   text-transform: uppercase;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -172,18 +172,18 @@ h5 {
 }
 
 .suscribe .suscribe__bold2 {
-  color: white;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
   font-size: 1.5em;
+  font-weight: 700;
+  color: white;
+  text-transform: uppercase;
   text-align: center;
   display: block;
   text-decoration: underline;
 }
 
 .suscribe .suscribe__texto {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   text-align: center;
   font-size: 1rem;
   width: 60%;
@@ -207,7 +207,7 @@ h5 {
 }
 
 .footer .col-6.col-md-6 .texto {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   text-align: center;
   font-size: 1rem;
 }
@@ -223,13 +223,13 @@ h5 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: white;
   background-image: url(../imagenes/patronNegro.jpg);
   background-position: top;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
   font-size: 3em;
+  font-weight: 700;
+  color: white;
+  text-transform: uppercase;
   width: 100%;
   text-align: center;
   height: 3em;
@@ -252,8 +252,9 @@ h5 {
 }
 
 .textoBlack {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 1em;
+  font-weight: 400;
   color: black;
 }
 
